# ofxstatement-wise

./: .gitignore  Pipfile  README.rst  pyproject.toml
src/ofxstatement_wise/: plugin.py
