[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ofxstatement-wise"
version = "0.0.1"
authors = [
  { name="Milan Knížek", email="milankni@gmail.com" },
]
description = "Ofxstatement plugin for Wise (CSV, UTF-8)"
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Utilities",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
keywords = ["ofx", "banking", "statement", "plugin", "ofxstatement"]
dependencies = [
  "ofxstatement",
]

[project.urls]
Homepage = "https://github.com/archont00/ofxstatement-wise/"

[project.entry-points."ofxstatement"]
wise = "ofxstatement_wise.plugin:WisePlugin"
